<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/t_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_nombre"
            android:hint="@string/hintNombre">

            <requestFocus />
        </EditText>
       <TextView
            android:id="@+id/t_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nombre"
            android:text="@string/tipo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/t_tipo"
            android:layout_toRightOf="@id/t_tipo" />
        
        <TextView 
            android:id="@+id/t_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_tipo"
            android:text="@string/direccion"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText 
            android:id="@+id/direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tipo"
            android:hint="@string/hintDireccion"
            android:inputType="textPostalAddress"/>
        
        <TextView
            android:id="@+id/t_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/direccion"
            android:text="@string/telefono"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/t_telefono"
            android:layout_toRightOf="@+id/t_telefono"
            android:hint="@string/telefonoHint"
            android:inputType="phone" />
        
        <TextView
            android:id="@+id/t_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/telefono"
  			android:text="@string/URL"
  			android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_url"
            android:hint="@string/urlHint"
            android:inputType="textUri" />
        
        <TextView 
            android:id="@+id/t_comentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/url"
            android:text="@string/comentario"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText 
            android:id="@+id/comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_comentario"
            android:hint="@string/comentarioHint"
            android:inputType="textMultiLine"/>



    </RelativeLayout>
    

</ScrollView>
